--- a/XF_FoodApp/XF_FoodApp/Styles/Spaces.xaml
+++ b/XF_FoodApp/XF_FoodApp/Styles/Spaces.xaml
@@ -1,48 +1,65 @@
 ﻿<?xml version="1.0" encoding="UTF-8" ?>
 <?xaml-comp compile="true" ?>
-<ResourceDictionary xmlns="http://xamarin.com/schemas/2014/forms"
-             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             xmlns:d="http://xamarin.com/schemas/2014/forms/design"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-             mc:Ignorable="d">
+<ResourceDictionary
+    xmlns="http://xamarin.com/schemas/2014/forms"
+    xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+    xmlns:d="http://xamarin.com/schemas/2014/forms/design"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    mc:Ignorable="d">
 
-    <!-- TYPES OF SPACES-->
-    <!--++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++-->
-    <OnPlatform x:TypeArguments="Thickness" x:Key="idealSpace">
-        <On Platform="Android" Value="16,0"/>
-        <On Platform="iOS" Value="18,0"/>
+    <!--  TYPES OF SPACES  -->
+    <!--  ++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++  -->
+    <OnPlatform x:Key="idealSpace" x:TypeArguments="Thickness">
+        <On Platform="Android" Value="16,0" />
+        <On Platform="iOS" Value="18,0" />
     </OnPlatform>
 
-    <OnPlatform x:TypeArguments="Thickness" x:Key="mediumSpace">
-        <On Platform="Android" Value="20,0"/>
-        <On Platform="iOS" Value="22,0"/>
+    <OnPlatform x:Key="mediumSpace" x:TypeArguments="Thickness">
+        <On Platform="Android" Value="20,0" />
+        <On Platform="iOS" Value="22,0" />
     </OnPlatform>
 
-    <OnPlatform x:TypeArguments="Thickness" x:Key="bigSpace">
-        <On Platform="Android" Value="32,0"/>
-        <On Platform="iOS" Value="34,0"/>
+    <OnPlatform x:Key="bigSpace" x:TypeArguments="Thickness">
+        <On Platform="Android" Value="32,0" />
+        <On Platform="iOS" Value="34,0" />
     </OnPlatform>
-    <!--++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++-->
+    <!--  ++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++  -->
+   
 
-
-    <!-- SPACES Grid-->
-    <!--++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++-->
-    <Style TargetType="Grid" x:Key="GridIdealSpace">
-        <Setter Property="Padding" Value="{StaticResource idealSpace}"/>
+    <!--  SPACES Grid  -->
+    <!--  ++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++  -->
+    <Style x:Key="GridIdealSpace" TargetType="Grid">
+        <Setter Property="Padding" Value="{StaticResource idealSpace}" />
     </Style>
 
-    <Style TargetType="Grid" x:Key="GridMediumSpace">
-        <Setter Property="Padding" Value="{StaticResource mediumSpace}"/>
+    <Style x:Key="GridMediumSpace" TargetType="Grid">
+        <Setter Property="Padding" Value="{StaticResource mediumSpace}" />
     </Style>
 
-    <Style TargetType="Grid" x:Key="GridBigSpace">
-        <Setter Property="Padding" Value="{StaticResource bigSpace}"/>
+    <Style x:Key="GridBigSpace" TargetType="Grid">
+        <Setter Property="Padding" Value="{StaticResource bigSpace}" />
     </Style>
-    <!--++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++-->
+    <!--  ++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++  -->
+
     
+    <!--  SPACES StackLayout  -->
+    <!--  ++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++  -->
+    <Style x:Key="StackIdealSpace" TargetType="StackLayout">
+        <Setter Property="Padding" Value="{StaticResource idealSpace}" />
+    </Style>
 
-    <!-- SPACES BASE-->
-    <!--++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++-->
+    <Style x:Key="StackMediumSpace" TargetType="StackLayout">
+        <Setter Property="Padding" Value="{StaticResource mediumSpace}" />
+    </Style>
+
+    <Style x:Key="StackBigSpace" TargetType="StackLayout">
+        <Setter Property="Padding" Value="{StaticResource bigSpace}" />
+    </Style>
+    <!--  ++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++  -->
+
+    
+    <!--  SPACES BASE  -->
+    <!--  ++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++  -->
     <Style TargetType="Grid">
         <Setter Property="RowSpacing" Value="0" />
         <Setter Property="ColumnSpacing" Value="0" />
@@ -51,6 +68,29 @@
     <Style TargetType="StackLayout">
         <Setter Property="Spacing" Value="0" />
     </Style>
-    <!--++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++-->
+    <!--  ++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++  -->
+    
+    
+    
+    
+    
+    
+    <!-- SPACES PERSONALIZADOS -->
+    <!--  ++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++  -->
+    <OnPlatform x:Key="idealPSpace" x:TypeArguments="Thickness">
+        <On Platform="Android" Value="16,0,0,0" />
+        <On Platform="iOS" Value="18,0,0,0" />
+    </OnPlatform>
+    <!--  ++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++  -->
+    
+    
+    <!--  SPACES Grid PERSONALIZADOS  -->
+    <!--  ++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++  -->
+    <Style TargetType="Grid" x:Key="GridIdealPSpace">
+        <Setter Property="Padding" Value="{StaticResource idealPSpace}" />
+    </Style>
+    <!--  ++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++  -->
+
+   
 
 </ResourceDictionary>
