--- a/XF_FoodApp/XF_FoodApp/Styles/Themes/WhiteTheme.xaml
+++ b/XF_FoodApp/XF_FoodApp/Styles/Themes/WhiteTheme.xaml
@@ -1,11 +1,12 @@
 ﻿<?xml version="1.0" encoding="UTF-8" ?>
 <?xaml-comp compile="true" ?>
-<ResourceDictionary xmlns="http://xamarin.com/schemas/2014/forms"
-                    xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-                    xmlns:d="http://xamarin.com/schemas/2014/forms/design"
-                    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-                    mc:Ignorable="d"
-                    Source="/Styles/General.xaml">
+<ResourceDictionary
+    xmlns="http://xamarin.com/schemas/2014/forms"
+    xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+    xmlns:d="http://xamarin.com/schemas/2014/forms/design"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    Source="/Styles/General.xaml"
+    mc:Ignorable="d">
 
     <Color x:Key="colAccCheck">#FFE7F9F5</Color>
     <Color x:Key="colAccError">#FFF9E7EB</Color>
@@ -22,5 +23,5 @@
     <Color x:Key="colSec">#FF26315F</Color>
     <Color x:Key="colTer">#FF56565A</Color>
     <Color x:Key="colUnsPrim">#FFC7CAD1</Color>
-    
+
 </ResourceDictionary>
