--- a/XF_FoodApp/XF_FoodApp/Views/Discover.xaml
+++ b/XF_FoodApp/XF_FoodApp/Views/Discover.xaml
@@ -1,16 +1,187 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
-<ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
-             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             xmlns:d="http://xamarin.com/schemas/2014/forms/design"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-             mc:Ignorable="d"
-             x:Class="XF_FoodApp.Views.Discover">
+<ContentPage
+    x:Class="XF_FoodApp.Views.Discover"
+    xmlns="http://xamarin.com/schemas/2014/forms"
+    xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+    xmlns:d="http://xamarin.com/schemas/2014/forms/design"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:vm="clr-namespace:XF_FoodApp.ViewModels"
+    mc:Ignorable="d">
+
+    <ContentPage.BindingContext>
+        <vm:DiscoverViewModel />
+    </ContentPage.BindingContext>
+
+
     <ContentPage.Content>
         <Grid>
-            <BoxView BackgroundColor="{StaticResource colQua}"/>
-            <Grid>
-                
-            </Grid>
+            <BoxView BackgroundColor="{StaticResource colQua}" />
+            <ScrollView>
+                <Grid
+                    Style="{StaticResource GridIdealPSpace}"
+                    RowSpacing="22.5">
+
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="Auto" />
+                        <RowDefinition Height="Auto" />
+                    </Grid.RowDefinitions>
+
+                    <StackLayout
+                        Grid.Row="0"
+                        Spacing="15">
+                        <Label
+                            Text="Discovery new places"
+                            Style="{DynamicResource TxtHeadline4_2}" />
+
+                        <CollectionView
+                            ItemsSource="{Binding ListRestaurant}"
+                            SelectionMode="Single"
+                            HeightRequest="345.5">
+                            <CollectionView.ItemsLayout>
+                                <GridItemsLayout Orientation="Horizontal" />
+                            </CollectionView.ItemsLayout>
+                            <CollectionView.ItemTemplate>
+                                <DataTemplate>
+                                    <Frame
+                                        Padding="7.5"
+                                        BackgroundColor="transparent"
+                                        HasShadow="False">
+                                        <Frame
+                                            Padding="0"
+                                            CornerRadius="6"
+                                            WidthRequest="208"
+                                            BackgroundColor="{StaticResource colQua}"
+                                            Visual="Material"
+                                            HasShadow="False">
+                                            <StackLayout Spacing="6">
+                                                <Frame
+                                                    Padding="0"
+                                                    CornerRadius="6"
+                                                    Visual="Material"
+                                                    HasShadow="False">
+                                                    <Image
+                                                        Source="{Binding Image_Restaurant}"
+                                                        Aspect="AspectFill"
+                                                        HeightRequest="252" />
+                                                </Frame>
+                                                <Label
+                                                    Margin="0,0,0,2"
+                                                    Text="{Binding Title_Restaurant}"
+                                                    Style="{StaticResource TxtTitle_1}"
+                                                    LineBreakMode="TailTruncation" />
+                                                <Label
+                                                    Text="{Binding Place_Restaurant}"
+                                                    Style="{StaticResource TxtSubTit2_1}"
+                                                    LineBreakMode="TailTruncation" />
+                                                <StackLayout Orientation="Horizontal">
+                                                    <Image
+                                                        Margin="0,-4,8.2,0"
+                                                        Source="{StaticResource icon_star}"
+                                                        HorizontalOptions="Start"
+                                                        VerticalOptions="Center" />
+                                                    <Label
+                                                        Margin="0,0,2,0"
+                                                        Text="{Binding Rating1_Restaurant}"
+                                                        Style="{StaticResource TxtSubTit2_2}"
+                                                        HorizontalOptions="Start"
+                                                        LineBreakMode="TailTruncation" />
+                                                    <Label
+                                                        Margin="0,0,10,0"
+                                                        Text="{Binding Rating2_Restaurant}"
+                                                        Style="{StaticResource TxtSubTit2_1}"
+                                                        HorizontalOptions="Start"
+                                                        LineBreakMode="TailTruncation" />
+
+                                                    <Frame
+                                                        Margin="0,-4,0,0"
+                                                        Padding="0"
+                                                        BackgroundColor="{StaticResource colPrim}"
+                                                        HasShadow="False"
+                                                        CornerRadius="10"
+                                                        Visual="Material"
+                                                        WidthRequest="78"
+                                                        HeightRequest="18"
+                                                        HorizontalOptions="EndAndExpand"
+                                                        VerticalOptions="Center">
+                                                        <Label
+                                                            Text="Free delivery"
+                                                            MaxLines="1"
+                                                            Style="{StaticResource Button_3}"
+                                                            HorizontalOptions="Center"
+                                                            VerticalOptions="Center"
+                                                            LineBreakMode="TailTruncation" />
+                                                    </Frame>
+                                                </StackLayout>
+                                            </StackLayout>
+                                        </Frame>
+                                    </Frame>
+                                </DataTemplate>
+                            </CollectionView.ItemTemplate>
+                        </CollectionView>
+                    </StackLayout>
+
+                    <StackLayout
+                        Grid.Row="1"
+                        Spacing="16">
+
+                        <StackLayout
+                            Padding="0,0,16,0"
+                            Orientation="Horizontal">
+                            <Label
+                                Text="Top categories"
+                                Style="{DynamicResource TxtHeadline6_1}"
+                                HorizontalOptions="Start"
+                                VerticalOptions="Center" />
+                            <Label
+                                Text="Show all"
+                                Style="{DynamicResource TxtSubTit1_1}"
+                                HorizontalOptions="EndAndExpand"
+                                VerticalOptions="Center" />
+                        </StackLayout>
+
+                        <CollectionView
+                            SelectionMode="Single"
+                            ItemsSource="{Binding ListCategory}"
+                            HeightRequest="150">
+                            <CollectionView.ItemsLayout>
+                                <GridItemsLayout Orientation="Horizontal" />
+                            </CollectionView.ItemsLayout>
+                            <CollectionView.ItemTemplate>
+                                <DataTemplate>
+                                    <Frame Padding="7.5">
+                                        <StackLayout Spacing="4">
+                                            <Frame
+                                                Margin="0,0,0,4"
+                                                Padding="0"
+                                                WidthRequest="88"
+                                                HeightRequest="88"
+                                                Visual="Material"
+                                                BackgroundColor="{StaticResource colQua}">
+                                                <Label
+                                                    Text="{Binding Image_Category}"
+                                                    FontFamily="{StaticResource CustomIconFont}"
+                                                    FontSize="44"
+                                                    TextColor="{Binding ImageColor_Category}"
+                                                    HorizontalOptions="Center"
+                                                    VerticalOptions="Center" />
+                                            </Frame>
+
+                                            <Label
+                                                Text="{Binding Title_Category}"
+                                                Style="{StaticResource TxtTitle_1}" />
+
+                                            <Label
+                                                Text="{Binding Place_Category}"
+                                                Style="{StaticResource TxtSubTit2_1}" />
+
+                                        </StackLayout>
+                                    </Frame>
+                                </DataTemplate>
+                            </CollectionView.ItemTemplate>
+                        </CollectionView>
+                    </StackLayout>
+                </Grid>
+            </ScrollView>
         </Grid>
     </ContentPage.Content>
 </ContentPage>
