Styles System => Stable Android and iOS Add Discover.xaml and Favourite.xaml
Remarks:
It was added in GridLayout proportionally (*) so that it occupies all the space on long devices whether Android or iOS.

--- a/XF_FoodApp/XF_FoodApp/Views/Favourite.xaml
+++ b/XF_FoodApp/XF_FoodApp/Views/Favourite.xaml
@@ -55,7 +55,7 @@
                                             <StackLayout
                                                 HorizontalOptions="FillAndExpand"
                                                 Orientation="Vertical"
-                                                VerticalOptions="Center"
+                                                VerticalOptions="FillAndExpand"
                                                 Spacing="4">
 
                                                 <StackLayout
