--- a/XF_FoodApp/XF_FoodApp/Views/Discover.xaml
+++ b/XF_FoodApp/XF_FoodApp/Views/Discover.xaml
@@ -22,13 +22,14 @@
                     RowSpacing="22.5">
 
                     <Grid.RowDefinitions>
-                        <RowDefinition Height="Auto" />
-                        <RowDefinition Height="Auto" />
+                        <RowDefinition Height=".7*" />
+                        <RowDefinition Height=".3*" />
                     </Grid.RowDefinitions>
 
                     <StackLayout
                         Grid.Row="0"
-                        Spacing="15">
+                        Spacing="15"
+                        Margin="0,32,0,0">
                         <Label
                             Text="Discovery new places"
                             Style="{DynamicResource TxtHeadline4_2}" />
@@ -148,7 +149,9 @@
                             </CollectionView.ItemsLayout>
                             <CollectionView.ItemTemplate>
                                 <DataTemplate>
-                                    <Frame Padding="7.5">
+                                    <Frame Padding="7.5"
+                                           HasShadow="False"
+                                           Visual="Material">
                                         <StackLayout Spacing="4">
                                             <Frame
                                                 Margin="0,0,0,4"
